--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 #container{
     margin: 0 auto;
-    width: 45%;
+    width: 47.5%;
     height: 1000px;
     background: lightblue;
 }
@@ -15,32 +15,47 @@
 header{
     width: 100%;
     height: 15%;
-    background: lightcyan;
+    background: lightskyblue;
 }
 
 nav{
     width: 100%;
-    height: 5.5%;
+    height: 40px;
 }
 
 section{
     width: 100%;
-    height: 44.5%;
+    height: 800px;
     background: lightyellow;
 }
 
 footer{
     width: 100%;
-    height: 15%;
+    height: 10%;
     background: lightgrey;
 }
 
+.clearAll{
+    clear: both;
+}
+
+#home_header_image{
+    width: 50%;
+    height: 100%;
+    background: lightgrey;
+    float: left;
+}
+
+#header_image{
+    text-align: center;
+    line-height: 150px;
+}
+
 #homeLogin{
-    width: 250px;
     border: solid 2px black;
     border-radius: 5px;
     float: right;
-    margin: 25px 0px;
+    margin: 30px 0px;
 }
 
 #home_login_style{
@@ -75,6 +90,95 @@ footer{
     height: 10px;
     display: inline-block;
     margin: 0 5px;
+}
+
+ul{
+    height: 40px;
+}
+
+li{
+    display: inline-block;
+    list-style-type: none;
+    text-align: center;
+    line-height: 40px;
+    background: lightcyan;
+}
+
+a{
+    font-size: 14px;
+    text-decoration: none;
+    margin: 5px;
+}
+
+.content_example1{
+    width: 20%;
+    height: 15%;
+    border: solid 2px black;
+    display: inline-block;
+    margin: 35px;
+}
+
+.content_example2{
+    width: 45%;
+    height: 15%;
+    border: solid 2px black;
+    display: inline-block;
+    margin: 35px;
+}
+
+#accountManage, #manageQuote, #manageServices{
+    width: 50%;
+    height: 425px;
+    border: solid 2px black;
+    margin: 0 auto;
+}
+
+#account_manage_form_style, #manage_quote_form_style, #manage_service_form_style{
+    width: 100%;
+    height: 100%;
+    margin: 30px;
+}
+
+#account_manage_search_input, #manage_quote_search_input, #manage_service_search_input{
+    width: 125px;
+    margin: 25px 5px 50px 5px;
+    display: inline-block;
+    font-size: 12px;
 
 }
 
+#account_manage_search_label, #manage_quote_search_label, #manage_service_search_label{
+    width: 75px;
+    margin: 25px 5px 50px 5px;
+    display: inline-block;
+    font-size: 12px;
+}
+
+#search_submit {
+    margin-left: 20px;
+    width: 50px;
+    height: 20px;
+    display: inline-block;
+    font-size: 12px;
+}
+
+.account_manage_form_input, .manage_quote_form_input, .manage_service_form_input{
+    width: 150px;
+    margin: 5px 20px;
+    display: inline-block;
+    font-size: 14px;
+
+}
+
+.account_manage_form_label, .manage_quote_form_label, .manage_service_form_label{
+    width: 85px;
+    margin: 5px;
+    display: inline-block;
+    font-size: 14px;
+}
+
+#save_changes_button, #reset_changes_button, #view_quote_button, #reset_quote_search_button{
+    margin: 25px 35px;
+    padding: 2px;
+    display: inline-block;
+}
