--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,24 @@ a{
     margin: 35px;
 }
 
+.content_example3{
+    width: 70%;
+    height: 15%;
+    border: solid 2px black;
+    display: inline-block;
+    margin: 35px;
+    text-align: center;
+}
+
+.content_example4{
+    width: 50%;
+    border: solid 2px black;
+    display: inline-block;
+    margin: 35px;
+    text-align: center;
+}
+
+
 #accountManage, #manageQuote, #manageServices{
     width: 50%;
     height: 425px;
@@ -163,7 +181,7 @@ a{
 }
 
 .account_manage_form_input, .manage_quote_form_input, .manage_service_form_input{
-    width: 150px;
+    width: 200px;
     margin: 5px 20px;
     display: inline-block;
     font-size: 14px;
@@ -177,8 +195,35 @@ a{
     font-size: 14px;
 }
 
-#save_changes_button, #reset_changes_button, #view_quote_button, #reset_quote_search_button{
+#save_changes_button, #reset_changes_button, #view_quote_button, #reset_quote_search_button, #add_services_button{
     margin: 25px 35px;
     padding: 2px;
     display: inline-block;
+}
+
+#grey_background{
+    display: none;
+    background: #000000;
+    opacity: .5;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+#popupbox{
+    display: none;
+    background: #ffffff;
+    position: absolute;
+    top: 30%;
+    right: 25%;
+    bottom: 20%;
+    left: 25%;
+}
+
+.popup_button_style{
+    margin: 5px;
+    font-size: 12px;
+    padding: 2px;
 }
