--- a/css/style.css
+++ b/css/style.css
@@ -158,14 +158,12 @@ a{
 .form_style{
     width: 100%;
     height: 100%;
-    margin: 30px;
 }
 
 .form_container{
-    width: 50%;
-    height: 425px;
-    border: solid 2px black;
+    width: 100%;
     margin: 0 auto;
+    text-align: center;
 }
 
 .label_style{
