--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,14 @@ header{
     background: #b3d4fc;
 }
 
+h1{
+    line-height: 80px;
+}
+
+h3{
+    margin-bottom: 35px;
+}
+
 nav{
     position: fixed;
     top: 0;
@@ -53,9 +61,10 @@ nav ul li a{
     -webkit-transition-property: color, background-color;
     transition-property: color, background-color;
 }
-.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active, .button_style_two:hover, .button_style_two:focus, .button_style_two:active{
+.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active, .buttonStyleTwo:hover, .buttonStyleTwo:focus, .buttonStyleTwo:active{
     background-color: #b3d4fc;
     color: #0078ae;
+    cursor: pointer;
 }
 
 .activeTab{
@@ -135,10 +144,10 @@ footer{
     float: right;
 }
 
-.button_style_two{
-    display: inline-block;
+.buttonStyleTwo{
+    display: block;
     color: #ffffff;
-    margin: 20px;
+    margin: 15px;
     width: 100px;
     height: 50px;
     text-align: center;
@@ -158,10 +167,56 @@ footer{
     transition-property: color, background-color;
 }
 
+.buttonStyleThree{
+    display: inline-block;
+    color: #ffffff;
+    margin: 15px;
+    width: 100px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    background: #0078ae;
+    vertical-align: middle;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    overflow: hidden;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    -webkit-transition-property: color, background-color;
+    transition-property: color, background-color;
+}
+
+
+.showHideSlideRight{
+    display: none;
+}
+
+.slideRightAnimation{
+    display: inline-block;
+    animation: slideRight 1.25s linear;
+}
+
+#searchSubmit, #quoteSearchSubmit{
+    display: inline-block;
+}
+
+@keyframes slideRight{
+
+    0% {opacity: 0; transform: translateX(-10%)}
+    25% {opacity: 0.25; transform: translateX(-5%)}
+    50% {opacity: 0.5; transform: translateX(0%)}
+    75% {opacity: 0.75;}
+    100% {opacity: 1;}
+
+}
+
 .content_example1{
     width: 20%;
     height: 15%;
-    border: solid 2px black;
     display: inline-block;
     margin: 35px;
 }
@@ -169,15 +224,13 @@ footer{
 .content_example2{
     width: 45%;
     height: 25%;
-    border: solid 2px black;
-    display: inline-block;
+    display: block;
     margin: 35px;
 }
 
 .content_example3{
     width: 70%;
     height: 15%;
-    border: solid 2px black;
     display: inline-block;
     margin: 35px;
     text-align: center;
@@ -185,7 +238,6 @@ footer{
 
 .content_example4{
     width: 50%;
-    border: solid 2px black;
     display: inline-block;
     margin: 35px;
     text-align: center;
@@ -272,4 +324,50 @@ footer{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.highlight{
+    font-weight: bold;
+    font-size: larger;
+    text-decoration: underline;
+}
+
+.spacingAll{
+    margin-right: 10px;
+}
+
+.spacingCustomer{
+    display: block;
+    margin-top: 10px;
+}
+
+.widthSpacing{
+    margin-left: 100px;
+}
+
+#searchQuote{
+    margin-top: 20px;
+}
+
+.quoteHistoryContainer{
+    display: inline-block;
+    margin-right: 80px;
+}
+
+#quoteHistoryMainContainer{
+    display: flex;
+}
+
+#legendPosition{
+    position: fixed;
+    bottom: 100px;
+    left: 300px;
+    padding: 10px;
+}
+
+legend{
+    font-weight: bold;
+    color: #0078ae;
+}
+
+
 
