--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,7 @@ nav ul li a{
 .hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active,
 .buttonStyleTwo:hover, .buttonStyleTwo:focus, .buttonStyleTwo:active,
 .buttonStyleThree:hover, .buttonStyleThree:focus, .buttonStyleThree:active,
-.buttonStyleFour:hover, .buttonStyleFour:focus, .buttonStyleFour:active,
-.buttonStyleFive:hover, .buttonStyleFive:focus, .buttonStyleFive:active{
+.buttonStyleFour:hover, .buttonStyleFour:focus, .buttonStyleFour:active{
     background-color: #b3d4fc;
     color: #0078ae;
     cursor: pointer;
@@ -137,7 +136,7 @@ footer{
 
 }
 
-#loginContainer{
+#loginContainerDesktop{
     width: 275px;
     height: 110px;
     background-color: #0078ae;
@@ -406,7 +405,7 @@ legend{
     overflow: hidden;
     width: 100%;
     padding: 0;
-    margin: 50% 0px 0px 0px;
+    margin: 50% 0 0 0;
 }
 
 .rslides li {
@@ -430,4 +429,186 @@ legend{
     float: left;
     width: 100%;
     border: 0;
+}
+
+#userLogonDD, #navDD{
+    display: none;
+}
+
+.openCloseUserMob{
+    display: block;
+}
+
+#loginContainerMobile, #navContainerMobile{
+    display: none;
+}
+
+/*    Media Query    */
+
+@media  screen and (max-width: 400px){
+
+    *{
+        margin: 0;
+        padding: 0;
+    }
+
+    #container{
+        top: 50px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    .buttonStyle{
+        margin: 5px 10px;
+        font-size: 16px;
+        width: 65px;
+    }
+
+    #loginContainerMobile, #navContainerMobile{
+        display: none;
+        width: 100%;
+        background-color: #0078ae;
+    }
+
+    header{
+        position: fixed;
+        top: 0;
+        height: 50px;
+        background: #0078ae;
+        border-bottom: 2px #6eac2c solid;
+    }
+
+    #mobIconContainer{
+        position: fixed;
+        top: 10px;
+        right: 25px;
+    }
+    
+    #userLogonDD, #navDD{
+        display: inline-block;
+        height: 30px;
+        width: 30px;
+        background: #ffffff;
+    }
+
+    #userLogonDD:hover, #navDD:hover{
+        cursor: pointer;
+    }
+    
+    nav{
+        display: none;
+    }
+
+    section{
+        display: block;
+        padding: 0;
+    }
+
+    footer{
+        position: fixed;
+        left: 0;
+        background: #0078ae;
+        font-size: 14px;
+    }
+
+    h1{
+        font-size: 14px;
+        line-height: 50px;
+    }
+
+    .rslides{
+        display: none;
+    }
+
+    .content_example1, .content_example2, .content_example3, .content_example4{
+        display: block;
+        width: 100%;
+        height: 15%;
+        margin: 15px;
+    }
+
+    .form_container{
+        display: block;
+        width: 100%;
+    }
+
+    #regiForm{
+        margin-left: 20px;
+    }
+
+    .buttonStyleTwo, .buttonStyleThree, .buttonStyleFour{
+        color: #ffffff;
+        margin: 5px;
+        width: 100px;
+        height: 30px;
+        text-align: center;
+        line-height: 30px;
+        background: #0078ae;
+        vertical-align: middle;
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+        box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        -moz-osx-font-smoothing: grayscale;
+        overflow: hidden;
+        -webkit-transition-duration: 0.5s;
+        transition-duration: 0.5s;
+        -webkit-transition-property: color, background-color;
+        transition-property: color, background-color;
+    }
+
+    .hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active,
+    .buttonStyleTwo:hover, .buttonStyleTwo:focus, .buttonStyleTwo:active,
+    .buttonStyleThree:hover, .buttonStyleThree:focus, .buttonStyleThree:active,
+    .buttonStyleFour:hover, .buttonStyleFour:focus, .buttonStyleFour:active{
+        background-color: #b3d4fc;
+        color: #0078ae;
+        cursor: pointer;
+    }
+
+    ul li a{
+        text-decoration: none;
+        display: block;
+        text-align: center;
+        color: #ffffff;
+        padding: 5px 0;
+    }
+
+    .openCloseMob{
+        display: block;
+    }
+
+    #legendPosition{
+        left: 0;
+        bottom: 100px;
+        width: 100%;
+        font-size: 14px;
+        padding: 10px;
+    }
+
+    #quoteHistoryMainContainer{
+        max-height: 400px;
+        overflow: scroll;
+        display: block;
+        border-bottom: 2px #6eac2c solid;
+    }
+
+    .quoteHistoryContainer{
+        margin-right: 0;
+        text-align: center;
+        display: block;
+    }
+
+    #viewQuote{
+        margin-top: 15px;
+    }
+
+    #quoteApproved, #quoteDeclined{
+        display: none;
+        margin: 10px auto;
+    }
+
+
 }
